[package]
name = "machine-vision-formats"
version = "0.1.6"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
categories = [
    "no-std",
    "data-structures",
    "science::robotics",
    "multimedia::images",
    "computer-vision",
]
repository = "https://github.com/strawlab/machine-vision-formats"
description = "Types and traits for working with raw image data from machine vision cameras"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cameras", "images"]
rust-version = "1.53"

[features]
default = ["std"]

std = []
alloc = []
